--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^5.21.3",
     "dotenv": "^16.4.5",
     "firebase": "^10.14.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-firebase-hooks": "^5.1.1",
